--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To-Do-App</title>
+
+        <link rel="stylesheet" href="./Styles/style.css">
     </head>
 
     <body>
 
         <h1>Meine To-Do-Liste</h1>
+
         <div class="todo-app">
             <form class="todo-form" action="">
-                <label for="todo-input">Aufgabe zum hinzufügen</label>
-                <input type="text" id="todo-input" class="todo-input">
-                <button type="submit" class="todo-button">Hinzufügen</button>
+                <label for="todo-input"></label>
+                <input type="text" id="todo-input" class="todo-input" placeholder="Neue Aufgabed hinzufügen...">
+                <button type="submit" class="todo-button">Aufgabe hinzufügen</button>
             </form>
+
             <ul class="todo-list">
                 <!--Elemente für die einzelnen Aufgaben: Checkbox für erledigt; span für Aufgabentext; button zum löschen-->
+                <li><input type="checkbox" aria-label="Aufgabe erledigen">
+                    <span>Aufgabentext</span>
+                    <button aria-label="Aufgabe Löschen">Löschen</button>
+                </li>
             </ul>
+
             <div class="todo-info"></div>
         </div>
 
