--- a/index.html
+++ b/index.html
@@ -6,26 +6,31 @@
         <title>To-Do-App</title>
 
         <link rel="stylesheet" href="./Styles/style.css">
+        <script src="script.js" defer></script>
     </head>
 
     <body>
-
+        <!-- App Header -->
         <h1>Meine To-Do-Liste</h1>
 
+        <!-- App -->
         <div class="todo-app">
-            <form class="todo-form" action="">
-                <input type="text" id="todo-input" class="todo-input" placeholder="Neue Aufgabed hinzufügen...">
-                <button type="submit" class="todo-button">Aufgabe hinzufügen</button>
+            <!-- App Form -->
+            <form class="todo-form" id="todo-form" action="">
+                <input type="text" id="todo-input" class="todo-input" name="task-text" placeholder="Neue Aufgabed hinzufügen..." required>
+                <button type="submit" id="todo-button" class="todo-button">Aufgabe hinzufügen</button>
             </form>
 
-            <ul class="todo-list">
+            <!-- App To-Do-Task List -->
+            <ul class="todo-list" id="todo-list">
                 <!--Elemente für die einzelnen Aufgaben: Checkbox für erledigt; span für Aufgabentext; button zum löschen-->
-                <li><input type="checkbox" aria-label="Aufgabe erledigen">
-                    <span>Aufgabentext</span>
-                    <button aria-label="Aufgabe Löschen">Löschen</button>
-                </li>
+                <!-- <li><input class="check-box" id="check-box" type="checkbox" aria-label="Aufgabe erledigen">
+                    <span class="task-name" id="task-name">Aufgabentext</span>
+                    <button class="delete-button" id="delete-button" aria-label="Aufgabe Löschen">Löschen</button>
+                </li> -->
             </ul>
 
+            <!-- App To-Do-Info -->
             <div class="todo-info"></div>
         </div>
 
